@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-14T08:28:10Z",
-  "count_outdated" : 150,
-  "uniques_outdated" : 106,
+  "timestamp" : "2022-10-16T08:25:22Z",
+  "count_outdated" : 151,
+  "uniques_outdated" : 107,
   "count" : 156,
   "uniques" : 111,
   "clones" : [
-    {
-      "timestamp": "2022-10-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-03T00:00:00Z",
       "count": 1,
